--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,26 @@
 ---
+
 ---
-<div>
-<p>Footer - tilføj footerindhold</p>
-</div>
-  
+
+<section class="bg-primary-bordeaux grid md:grid-cols-3 md:grid-rows-3">
+  <div class="md:col-start-2 md:col-end-3">
+    <h4 class="text-secondary-pink">Organisation</h4>
+    <p class="text-secondary-pink">
+      Vedtægter <br />Regnskaber <br />Privatliv & cookies
+    </p>
+  </div>
+  <div class="md:col-start-2 md:col-end-3 md:row-start-2 md:row-end-3">
+    <h4 class="text-secondary-pink">Sociale medier</h4>
+    <p class="text-secondary-pink">Instagram <br />Facebook</p>
+  </div>
+  <div class="md:col-start-3 md:col-end-4 md:row-start-1 md:row-end-3">
+    <h4 class="text-secondary-pink">Kontakt</h4><p class="text-secondary-pink">
+      Vesterbrogade 112B <br />1620 Vesterbro <br />København V
+      <br /><br />info@trv.dk
+      <br /><br />+45 93919278
+    </p>
+  </div>
+  <div class="md:col-start-1 md:col-end-2 md:row-start-3 md:row-end-4">
+    <img src="logo-footer.png" alt="The red vans logo" />
+  </div>
+</section>
