--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -2,19 +2,19 @@
 
 ---
 
-<section class="bg-primary-bordeaux grid md:grid-cols-3 md:grid-rows-3">
+<section class="bg-bordeaux grid md:grid-cols-3 md:grid-rows-3">
   <div class="md:col-start-2 md:col-end-3">
-    <h4 class="text-secondary-pink">Organisation</h4>
-    <p class="text-secondary-pink">
+    <h4 class="text-hf">Organisation</h4>
+    <p class="text-hf">
       Vedtægter <br />Regnskaber <br />Privatliv & cookies
     </p>
   </div>
   <div class="md:col-start-2 md:col-end-3 md:row-start-2 md:row-end-3">
-    <h4 class="text-secondary-pink">Sociale medier</h4>
-    <p class="text-secondary-pink">Instagram <br />Facebook</p>
+    <h4 class="text-hf">Sociale medier</h4>
+    <p class="text-hf">Instagram <br />Facebook</p>
   </div>
   <div class="md:col-start-3 md:col-end-4 md:row-start-1 md:row-end-3">
-    <h4 class="text-secondary-pink">Kontakt</h4><p class="text-secondary-pink">
+    <h4 class="text-hf">Kontakt</h4><p class="text-hf">
       Vesterbrogade 112B <br />1620 Vesterbro <br />København V
       <br /><br />info@trv.dk
       <br /><br />+45 93919278
