--- a/src/pages/stoet.astro
+++ b/src/pages/stoet.astro
@@ -5,7 +5,7 @@ import Link from "../components/Link.astro";
 ---
 
 <MainLayout title="Støt">
-  <section class="bg-secondary-pink">
+  <section class="bg-pink">
     <section class="grid md:grid-cols-3">
       <h1>Støt vores arbejde</h1>
       <h5 class="md:col-span-2">
@@ -31,7 +31,7 @@ import Link from "../components/Link.astro";
       </p>
       <h1>form her</h1>
     </section>
-    <section><img src="bil.png" alt="Tegnet bil" /></section>
+    <section><img src="tegnet-bil.webp" alt="Tegnet bil" /></section>
     <h2>Tre gode grunde til at donere</h2>
     <section class="grid md:grid-cols-3">
       <div>
@@ -61,7 +61,7 @@ import Link from "../components/Link.astro";
       </div>
     </section>
   </section>
-  <section class="bg-primary-bordeaux grid md:grid-cols-2">
+  <section class="bg-bordeaux grid md:grid-cols-2">
     <div>
       <h2 class="text-secondary-greywhite">Din plakat</h2>
       <p class="text-secondary-greywhite">
@@ -72,10 +72,10 @@ import Link from "../components/Link.astro";
         Når du har opsat din donation, modtager du en mail med information om, hvordan
         du får din plakat tilsendt.
       </p>
-      <Button variant="pink">Se vores merch</Button>
+      <Button variant="light">Se vores merch</Button>
     </div>
 
-    <div><img src="plakat.png" alt="Billede af plakat" /></div>
+    <div><img src="plakat.webp" alt="Billede af plakat" /></div>
   </section>
   <section class="bg-pink">
     <div class="grid md:grid-cols-3">
@@ -103,6 +103,6 @@ import Link from "../components/Link.astro";
         />
       </div>
     </section>
-    <Button variant="pink">Se vores merch</Button>
+    <Button variant="light">Se vores merch</Button>
   </section>
 </MainLayout>
