--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -4,9 +4,9 @@ const { variant } = Astro.props;
 const base = "rounded-4xl px-4 py-2 button cursor-pointer";
 
 const variants = {
-  red: "bg-accent-red text-primary-bordeaux",
-  pink: "bg-tertiary-darkpink text-primary-bordeaux",
-  bordeaux: "bg-primary-bordeaux text-secondary-greywhite",
+  header: "btn-header text-dark",
+  light: "btn-light text-dark",
+  dark: "btn-dark text-light",
 };
 ---
 
