--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,22 +5,22 @@ import Link from "../components/Link.astro";
 ---
 
 <MainLayout title="Forside">
-  <section class="bg-primary-bordeaux">
+  <section class="bg-bordeaux">
     <img
       src="logo-text.png"
       alt="The Red Van"
       class="place-self-center w-110 md:hidden"
     />
     <img
-      src="forside1.png"
+      src="forside-hero.webp"
       alt="Billede af kvinde i The Red Van"
       class="w-120 place-self-center"
     />
-    <h6 class="text-tertiary-darkpink">
+    <h6 class="text-text-hero">
       Vi støtter sexarbejdere i deres ret til et trygt og værdigt arbejdsliv.
     </h6>
   </section>
-  <section class="bg-secondary-pink grid md:grid-cols-2">
+  <section class="bg-pink grid md:grid-cols-2">
     <div>
       <h1>Støt vores mission</h1>
       <h5>
@@ -29,7 +29,7 @@ import Link from "../components/Link.astro";
         hygiejnisk og værdigt arbejdsmiljø end gaden. Vi arbejder
         skadesreducerende og kæmper aktivt for sexarbejderes rettigheder.
       </h5>
-      <Button variant="pink">Vores arbejde</Button>
+      <Button variant="light">Vores arbejde</Button>
     </div>
     <div>
       <h1>form her</h1>
@@ -40,15 +40,16 @@ import Link from "../components/Link.astro";
     <!-- karrusel her -->
   </section>
 
-  <section class="bg-primary-bordeaux grid md:grid-cols-2">
+  <section class="bg-bordeaux grid md:grid-cols-2">
     <div>
-      <img src="forside2.png" alt="Billede af frivllige ved The Red Van" />
+      <img
+        src="forside-body-1.webp"
+        alt="Billede af frivllige ved The Red Van"
+      />
     </div>
     <div>
-      <h3 class="text-secondary-greywhite">
-        Vil du være med at gøre en forskel?
-      </h3>
-      <p class="p-medium text-secondary-greywhite">
+      <h3 class="text-light">Vil du være med at gøre en forskel?</h3>
+      <p class="p-medium text-light">
         Nattevagterne er hjertet i The Red Vans arbejde, og det er frivillige,
         der gør det muligt for os at holde vanen åben. Som frivillig på
         nattevagt får du mulighed for at gøre en konkret forskel for
@@ -56,10 +57,10 @@ import Link from "../components/Link.astro";
         fredag og lørdag nat, hvor vi tilbyder kaffe og kondomer og er med til
         at skabe en tryggere interaktion mellem sexarbejdere og købere.
       </p>
-      <Button variant="pink">Bliv frivillig</Button>
+      <Button variant="light">Bliv frivillig</Button>
     </div>
   </section>
-  <section class="bg-secondary-lightblue">
+  <section class="bg-blue">
     <h2>Vores tre kerneværdier:</h2>
     <div class="grid md:grid-cols-3 md:grid-rows-3">
       <div>
@@ -86,7 +87,7 @@ import Link from "../components/Link.astro";
       <div
         class="md:col-start-2 md:col-end-4 md:row-start-2 md:row-end-4 md:place-items-stretch"
       >
-        <img src="forside3.png" alt="Billede af foredragsholdere" />
+        <img src="foredrag.webp" alt="Billede af foredragsholdere" />
       </div>
       <div class="md:col-start-1 md:col-end-2 md:row-start-3 md:row-end-4">
         <p>
@@ -94,10 +95,10 @@ import Link from "../components/Link.astro";
           holder vi workshops og talks, hvor vi enten kommer ud, eller viser
           rundt i vores vans.
         </p>
-        <Button variant="bordeaux">Book the red van</Button>
+        <Button variant="dark">Book the red van</Button>
       </div>
     </div>
-    <section class="bg-secondary-pink">
+    <section class="bg-pink">
       <h2>Artikler</h2>
       <div class="grid md:grid-cols-2">
         <p>
@@ -109,25 +110,25 @@ import Link from "../components/Link.astro";
         </p>
         <img src="forside4.png" alt="Billede af rød kuglepen" />
       </div>
-      <div class="border-y-accent-red border-1 grid grid-cols-3 grid-rows-2">
+      <div class="border-y-accent-red border grid grid-cols-3 grid-rows-2">
         <h6>19/10/25</h6><p class="col-span-2">
           Den danske lovgivning om sexarbejde og The Red Vans bud på
           forbedringer
         </p>
         <div class="col-start-3 row-start-2 place-self-end">
-          <Button variant="pink">Læs</Button>
+          <Button variant="light">Læs</Button>
         </div>
       </div>
-      <div class="border-b-accent-red border-b-1 grid grid-cols-3 grid-rows-2">
+      <div class="border-b-accent-red border-b grid grid-cols-3 grid-rows-2">
         <h6>08/10/25</h6><p class="col-span-2">
           Hvordan påvirker sæsonskiftet gadebaserede sexarbejdere?
         </p>
         <div class="col-start-3 row-start-2 place-self-end">
-          <Button variant="pink">Læs</Button>
+          <Button variant="light">Læs</Button>
         </div>
       </div>
       <div class="place-self-end">
-        <Button variant="pink">Se alle artikler</Button>
+        <Button variant="light">Se alle artikler</Button>
       </div>
     </section>
   </section>
