tilføjer fonte og opretter Text og Heading

--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -5,7 +5,33 @@
 @import "tailwindcss-animated";
 @import "tailwindcss-intersect";
 
+@font-face {
+  font-family: 'ABCMonumentGrotesk-Regular';
+  src: url('/fonts/ABCMonumentGrotesk-Regular-Trial.woff2') format('woff2');
+}
+
+@font-face {
+  font-family: 'ABCMonumentGrotesk-Bold';
+  src: url('/fonts/ABCMonumentGrotesk-Bold-Trial.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'ABCMonumentGrotesk-Medium';
+  src: url('/fonts/ABCMonumentGrotesk-Medium-Trial.woff') format('woff');
+}
+
+@font-face {
+  font-family: 'PPRightGrotesk-CompactBlack';
+  src: url('/fonts/PPRightGrotesk-CompactBlack.woff') format('woff');
+}
+
 @theme {
+  /* Fonte */
+  --font-regular: 'ABCMonumentGrotesk-Regular';
+  --font-bold: 'ABCMonumentGrotesk-Bold';
+  --font-medium: 'ABCMonumentGrotesk-Medium';
+  --font-black: 'PPRightGrotesk-CompactBlack';
+
   /* Størrelser */
   --text-60: 60px;
   --text-40: 40px;
@@ -18,7 +44,7 @@
   /* Farver */
   --color-primary-bordeaux: #321f26;
   --color-secondary-pink: #ffdbdb;
-  --color-secondary-lightgreen: #dbf8ff;
+  --color-secondary-lightgreen: #f7f9f1;
   --color-secondary-lightblue: #dbf8ff;
   --color-secondary-greywhite: #fcfcfc;
   --color-tertiary-darkpink: #ff9b9b;
@@ -91,10 +117,11 @@
   }
 
   /* Fonte */
-  h1 {
+  /* h1 {
     font-size: var(--text-36);
     font-weight: var(--font-weight-black);
     color: var(--color-primary-bordeaux);
+    font-family: var(--font-black);
     @apply uppercase;
   }
 
@@ -102,6 +129,7 @@
     font-size: var(--text-30);
     font-weight: var(--font-weight-black);
     color: var(--color-primary-bordeaux);
+    font-family: var(--font-black);
     @apply uppercase;
   }
 
@@ -109,6 +137,7 @@
     font-size: var(--text-24);
     font-weight: var(--font-weight-black);
     color: var(--color-primary-bordeaux);
+    font-family: var(--font-black);
     @apply uppercase;
   }
 
@@ -116,6 +145,7 @@
     font-size: var(--text-20);
     font-weight: var(--font-weight-black);
     color: var(--color-primary-bordeaux);
+    font-family: var(--font-black);
     @apply uppercase;
   }
 
@@ -123,31 +153,38 @@
     font-size: var(--text-20);
     font-weight: var(--font-weight-medium);
     color: var(--color-primary-bordeaux);
+    font-family: var(--font-medium);
   }
 
   h6 {
     font-size: var(--text-16);
     font-weight: var(--font-weight-black);
     color: var(--color-primary-bordeaux);
+    font-family: var(--font-regular);
+
   }
 
   p {
     font-size: var(--text-16);
     font-weight: var(--font-weight-regular);
     color: var(--color-primary-bordeaux);
+    font-family: var(--font-regular);
   }
 
   .p-medium {
     font-size: var(--text-16);
     font-weight: var(--font-weight-medium);
     color: var(--color-primary-bordeaux);
+    font-family: var(--font-medium);
   }
 
   .button {
     font-size: var(--text-16);
     font-weight: var(--font-weight-bold);
+    font-family: var(--font-bold);
     @apply uppercase;
-  }
+  } */
+  
 
   @media (min-width: 768px) {
     h1 {
