--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,8 @@
 import MainLayout from "../layouts/MainLayout.astro";
 import Button from "../components/Button.astro";
 import Link from "../components/Link.astro";
+import Heading from "../components/Heading.astro";
+import Text from "../components/Text.astro";
 ---
 
 <MainLayout title="Forside">
@@ -16,9 +18,9 @@ import Link from "../components/Link.astro";
       alt="Billede af kvinde i The Red Van"
       class="w-120 place-self-center"
     />
-    <h6 class="text-text-hero">
+    <Heading htmlheading="h1" size="xlarge" stylingclasses="">
       Vi støtter sexarbejdere i deres ret til et trygt og værdigt arbejdsliv.
-    </h6>
+    </Heading>
   </section>
   <section class="bg-pink grid md:grid-cols-2">
     <div>
