tilføjer text og heading komponent på diverse sider

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,26 +18,40 @@ import Text from "../components/Text.astro";
       alt="Billede af kvinde i The Red Van"
       class="w-120 place-self-center"
     />
-    <Heading htmlheading="h1" size="xlarge" stylingclasses="">
+    <Heading htmlheading="h5" size="xsmall" stylingclasses="text-hero">
       Vi støtter sexarbejdere i deres ret til et trygt og værdigt arbejdsliv.
     </Heading>
   </section>
   <section class="bg-pink grid md:grid-cols-2">
     <div>
-      <h1>Støt vores mission</h1>
-      <h5>
+      <Heading
+        htmlheading="h1"
+        size="xlarge"
+        stylingclasses="uppercase text-dark"
+      >
+        Støt vores mission
+      </Heading>
+      <Heading htmlheading="h5" size="xsmall" stylingclasses="text-dark">
         The Red Vans mission er at sikre bedre vilkår for gadebaserede
         sexarbejdere. Med vores ombyggede varevogn tilbyder vi et tryggere, mere
         hygiejnisk og værdigt arbejdsmiljø end gaden. Vi arbejder
         skadesreducerende og kæmper aktivt for sexarbejderes rettigheder.
-      </h5>
+      </Heading>
       <Button variant="light">Vores arbejde</Button>
     </div>
     <div>
       <h1>form her</h1>
     </div>
     <div>
-      <div><h2>Det går din donation til</h2></div>
+      <div>
+        <Heading
+          htmlheading="h2"
+          size="large"
+          stylingclasses="uppercase text-dark"
+        >
+          Det går din donation til</Heading
+        >
+      </div>
     </div>
     <!-- karrusel her -->
   </section>
@@ -50,41 +64,62 @@ import Text from "../components/Text.astro";
       />
     </div>
     <div>
-      <h3 class="text-light">Vil du være med at gøre en forskel?</h3>
-      <p class="p-medium text-light">
+      <Heading
+        htmlheading="h3"
+        size="medium"
+        stylingclasses="uppercase text-light"
+        >Vil du være med til at gøre en forskel?</Heading
+      >
+      <Text teksttype="brødtekst" stylingclasses="text-light">
         Nattevagterne er hjertet i The Red Vans arbejde, og det er frivillige,
         der gør det muligt for os at holde vanen åben. Som frivillig på
         nattevagt får du mulighed for at gøre en konkret forskel for
         gadebaserede sexarbejdere i København. Vores røde van er åben torsdag,
         fredag og lørdag nat, hvor vi tilbyder kaffe og kondomer og er med til
         at skabe en tryggere interaktion mellem sexarbejdere og købere.
-      </p>
+      </Text>
       <Button variant="light">Bliv frivillig</Button>
     </div>
   </section>
   <section class="bg-blue">
-    <h2>Vores tre kerneværdier:</h2>
+    <Heading htmlheading="h1" size="xlarge" stylingclasses="uppercase text-dark"
+      >Vores tre kerneværdier:</Heading
+    >
     <div class="grid md:grid-cols-3 md:grid-rows-3">
       <div>
-        <h4>01 <br />Sex work is work</h4><p>
+        <Heading
+          htmlheading="h3"
+          size="medium"
+          stylingclasses="uppercase text-dark"
+          >01 <br />Sex work is work</Heading
+        ><Heading htmlheading="h6" size="xxsmall" stylingclasses="text-dark">
           Vi ser sexarbejde som et legitimt erhverv og støtter
           sexarbejderbevægelsens kamp for selvbestemmelse og afstigmatisering.
           Sexarbejderrettigheder er menneskerettigheder!
-        </p>
+        </Heading>
       </div>
       <div>
-        <h4>02 <br />Harm reduction</h4><p>
+        <Heading
+          htmlheading="h3"
+          size="medium"
+          stylingclasses="uppercase text-dark">02 <br />Harm reduction</Heading
+        ><Heading htmlheading="h6" size="xxsmall" stylingclasses="text-dark">
           Vi tilbyder gadebaserede sexarbejdere en mere sikker og værdig
           arbejdsplads, fordi alle har ret til støtte og solidaritet uanset
           deres profession og livssituation.
-        </p>
+        </Heading>
       </div>
       <div>
-        <h4>03 <br />Rights not rescue</h4><p>
+        <Heading
+          htmlheading="h3"
+          size="medium"
+          stylingclasses="uppercase text-dark"
+          >03 <br />Rights not rescue</Heading
+        ><Heading htmlheading="h6" size="xxsmall" stylingclasses="text-dark">
           Vi mener, at sexarbejdere skal beskyttes med rettigheder frem for at
           blive reddet, fordi vi ved, at mange står uden alternative måder at
           forsørge sig selv og deres familier.
-        </p>
+        </Heading>
       </div>
       <div
         class="md:col-start-2 md:col-end-4 md:row-start-2 md:row-end-4 md:place-items-stretch"
@@ -92,39 +127,47 @@ import Text from "../components/Text.astro";
         <img src="foredrag.webp" alt="Billede af foredragsholdere" />
       </div>
       <div class="md:col-start-1 md:col-end-2 md:row-start-3 md:row-end-4">
-        <p>
+        <Text teksttype="brødtekstmedium" stylingclasses="text-dark">
           Vi elsker at fortælle om vores organisation og det vi står for. Derfor
           holder vi workshops og talks, hvor vi enten kommer ud, eller viser
           rundt i vores vans.
-        </p>
+        </Text>
         <Button variant="dark">Book the red van</Button>
       </div>
     </div>
     <section class="bg-pink">
-      <h2>Artikler</h2>
+      <Heading
+        htmlheading="h1"
+        size="xlarge"
+        stylingclasses="uppercase text-dark">Artikler</Heading
+      >
       <div class="grid md:grid-cols-2">
-        <p>
+        <Heading htmlheading="h5" size="xsmall" stylingclasses="text-dark">
           Vi lægger vægt på, at sexarbejdere skal have de samme rettigheder og
           beskyttelse som andre arbejdstagere, og vi engagerer os i at skabe
           opmærksomhed omkring deres vilkår.
           <br /><br />
           Vi deler vores indsigter og perspektiver i vores blog: læs med her
-        </p>
+        </Heading>
         <img src="forside4.png" alt="Billede af rød kuglepen" />
       </div>
       <div class="border-y-accent-red border grid grid-cols-3 grid-rows-2">
-        <h6>19/10/25</h6><p class="col-span-2">
+        <Heading htmlheading="h4" size="small" stylingclasses="text-dark"
+          >19/10/25</Heading
+        ><Heading htmlheading="h6" size="xxsmall" stylingclasses="text-dark">
           Den danske lovgivning om sexarbejde og The Red Vans bud på
           forbedringer
-        </p>
+        </Heading>
         <div class="col-start-3 row-start-2 place-self-end">
           <Button variant="light">Læs</Button>
         </div>
       </div>
       <div class="border-b-accent-red border-b grid grid-cols-3 grid-rows-2">
-        <h6>08/10/25</h6><p class="col-span-2">
+        <Heading htmlheading="h4" size="small" stylingclasses="text-dark"
+          >08/10/25</Heading
+        ><Heading htmlheading="h6" size="xxsmall" stylingclasses="text-dark">
           Hvordan påvirker sæsonskiftet gadebaserede sexarbejdere?
-        </p>
+        </Heading>
         <div class="col-start-3 row-start-2 place-self-end">
           <Button variant="light">Læs</Button>
         </div>
