--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,24 +1,34 @@
 ---
-
+import Heading from "../components/Heading.astro";
+import Text from "../components/Text.astro";
 ---
 
 <section class="bg-bordeaux grid md:grid-cols-3 md:grid-rows-3">
   <div class="md:col-start-2 md:col-end-3">
-    <h4 class="text-hf">Organisation</h4>
-    <p class="text-hf">
+    <Heading htmlheading="h4" size="small" stylingclasses="uppercase text-hf">
+      Organisation
+    </Heading>
+    <Text teksttype="brødtekst" stylingclasses="text-hf">
       Vedtægter <br />Regnskaber <br />Privatliv & cookies
-    </p>
+    </Text>
   </div>
   <div class="md:col-start-2 md:col-end-3 md:row-start-2 md:row-end-3">
-    <h4 class="text-hf">Sociale medier</h4>
-    <p class="text-hf">Instagram <br />Facebook</p>
+    <Heading htmlheading="h4" size="small" stylingclasses="uppercase text-hf">
+      Sociale medier
+    </Heading>
+    <Text teksttype="brødtekst" stylingclasses="text-hf"
+      >Instagram <br />Facebook</Text
+    >
   </div>
   <div class="md:col-start-3 md:col-end-4 md:row-start-1 md:row-end-3">
-    <h4 class="text-hf">Kontakt</h4><p class="text-hf">
+    <Heading htmlheading="h4" size="small" stylingclasses="uppercase text-hf">
+      Kontakt os
+    </Heading>
+    <Text teksttype="brødtekst" stylingclasses="text-hf">
       Vesterbrogade 112B <br />1620 Vesterbro <br />København V
       <br /><br />info@trv.dk
       <br /><br />+45 93919278
-    </p>
+    </Text>
   </div>
   <div class="md:col-start-1 md:col-end-2 md:row-start-3 md:row-end-4">
     <img src="logo-footer.png" alt="The red vans logo" />
