--- a/src/components/Heading.Astro
+++ b/src/components/Heading.Astro
@@ -2,10 +2,10 @@
 const {
   htmlheading = "h2",
   size = "medium",
-  font = "sans",
+  font = undefined,
   stylingclasses = "",
 } = Astro.props;
-const HtmlHeading = htmlheading;
+const Htmlheading = htmlheading;
 
 const sizeClasses = {
   xlarge: "text-6xl md:text-4xl",
@@ -28,6 +28,6 @@ const defaultFontForSize = {
 const fontClass = font ?? defaultFontForSize[size];
 ---
 
-<HtmlHeading class:list={[sizeClasses[size], fontClass, stylingclasses]}>
+<Htmlheading class:list={[sizeClasses[size], fontClass, stylingclasses]}>
   <slot />
-</HtmlHeading>
+</Htmlheading>
