--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,11 +1,42 @@
 ---
-const { image, descr, h3, title, undertitle, text } = Astro.props;
+import Heading from "./Heading.astro";
+
+const {
+  image = "false",
+  descr,
+  title = "false",
+  undertitle = "false",
+  text,
+  header = "false",
+} = Astro.props;
 ---
 
 <div>
-  <img src={image} alt={descr} />
-  <h3>{h3}</h3>
-  <h4>{title}</h4>
-  <h5>{undertitle}</h5>
-  <p>{text}</p>
+  {image !== "false" && <img src={image} alt={descr} />}
+  {
+    header !== "false" && (
+      <Heading
+        htmlheading="h3"
+        size="medium"
+        stylingclasses="uppercase text-dark"
+      >
+        {header}
+      </Heading>
+    )
+  }
+  {
+    title !== "false" && (
+      <Heading
+        htmlheading="h4"
+        size="medium"
+        stylingclasses="uppercase text-dark"
+      >
+        {title}
+      </Heading>
+    )
+  }
+  {undertitle !== "false" && <h5>{undertitle}</h5>}
+  <Heading htmlheading="h6" size="xxsmall" stylingclasses="text-dark"
+    >{text}</Heading
+  >
 </div>
