--- a/src/pages/artikler.astro
+++ b/src/pages/artikler.astro
@@ -1,7 +1,7 @@
 ---
 import MainLayout from "../layouts/MainLayout.astro";
 import HeadingParagraf from "../components/HeadingParagraf.astro";
-import Article from "../components/Article.astro";
+import List from "../components/List.astro";
 ---
 
 <MainLayout title="Artikler">
@@ -9,19 +9,19 @@ import Article from "../components/Article.astro";
     title="Artikler"
     text="Vi lægger vægt på, at sexarbejdere skal have de samme rettiheder og beskyttelse som andre arbejdstagere, og vi engagerer os i at skabe opmærksomhed omkring deres vilkår."
   />
-  <Article
+  <List
     image="artikel1.webp"
     descr="Billede af klistermærker"
     title="D. 20/11/25"
     text="Den danske lovgivning om sexarbejde og The Red Vans bud på forbedringer"
   />
-  <Article
+  <List
     image="artikel2.webp"
     descr="Billede af to personer på gaden"
     title="D. 08/10/25"
     text="Hvordan påvirker sæsonskiftet gadebaseret sexarbejdere?"
   />
-  <Article
+  <List
     image="artikel3.webp"
     descr="Personer fra et foredragspanel"
     title="D. 26/09/25"
